# REMFracRes

./: .cproject  .project  CMakeLists.txt  README.md
.tracecompass/: .project
cmake/: REMFracResConfig.cmake.in
include/mylib/: common.h  hello_world.h
include/numeric/: model.h  property.h
include/primitive_mesh/: FracResBeddingLocalisation.h  boite.h  bounding_box.h  boundingbox.h  contrainte_geo.h  cylindre.h  faille.h  fault_array.h  fault_arrays_set_geo.h  fonction.h  fracture_set_geo.h  oriented_bounding_box.h  plan.h  point.h  polyedre.h  predicates.h  primitive.h  primitive_derive.h  tetra.h  varglob.h
include/remfracres/: BoxAABBEvalDistance.h  CellId.h  DistributionPower.h  FacetId.h  FaultArraySet.h  FracResBeddingAperture.h  FracResBeddingProperties.h  FracResCategoryEnum.h  FracResClustersFaultTypeEnum.h  FracResDataTypeEnum.h  FracResDistributionArrayTypeEnum.h  FracResDistributionEnum.h  FracResFracture.h  FracResGeometryCorrelationTypeEnum.h  FracResGeometryEnum.h  FracResHypothesis.h  FracResScenario.h  FracResStage.h  FracResTypeEnum.h  FracResUnit.h  REMFracRes.h  RemFracResFileManagement.h  RemFracResSim.h  fracResFileKeyWord.h  fractureset.h
src/: tetra_upscaler.cpp
src/mylib/: common.cpp  hello_world.cpp
src/numeric/: model.cpp
src/primitive_mesh/: FracResBeddingLocalisation.cpp  boite.cpp  contrainte_geo.cpp  cylindre.cpp  faille.cpp  fault_array.cpp  fault_array_set_geo.cpp  fonction.cpp  fracture_set_geo.cpp  plan.cpp  point.cpp  polyedre.cpp  predicates.cpp  primitive.cpp  primitive_derive.cpp
src/remfracres/: FaultArraySet.cpp  FracResBeddingAperture.cpp  FracResBeddingProperties.cpp  FracResFracture.cpp  FracResHypothesis.cpp  FracResScenario.cpp  FracResStage.cpp  FracResUnit.cpp  REMFracRes.cpp  REMFracResConfig.h.in  RemFracResFileManagement.cpp  RemFracResSim.cpp  fractureset.cpp
swig/: REMFracRes.i
tests/: .cproject  CMakeLists.txt
tests/fractureslib/: CMakeLists.txt  test-fractures.cpp
tests/mylib/: CMakeLists.txt  test-hello-world.cpp
